--- a/index.html
+++ b/index.html
@@ -10,13 +10,54 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" id="home">Quotly</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" id="liked-quotes">Liked</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div id="app">
+        <div id="quote-box">
+          <div class="row">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <div class="card">
+                  <div class="card-body">{{Quote goes here}}</div>
+                  <div class="card-footer d-flex justify-content-end">
+                    <button class="btn btn-outline-primary" id="like-btn">
+                      Like Quote
+                    </button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="row justify-content-center pt-4">
+            <div class="col col-2">
+              <button class="btn btn-primary" id="next-quote">
+                Next Quote
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- Import the index file as a module, allows to divide code up into multiple files -->
+    <script src="src/index.js" type="module"></script>
   </body>
 </html>
