feat: add box for liked quotes, hidden by default

--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
             </div>
           </div>
         </div>
+        <div id="liked-quote-box" class="hidden">
+          <div class="row">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <div class="card">
+                  <div class="card-body">{{Quote goes here}}</div>
+                  <div class="card-footer d-flex justify-content-end">
+                    <button class="btn btn-outline-danger" id="unlike-btn">
+                      Unlike Quote
+                    </button>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <script
