fix: remove default content

--- a/index.html
+++ b/index.html
@@ -29,18 +29,7 @@
       <div id="app">
         <div id="quote-box">
           <div class="row">
-            <ul class="list-group">
-              <li class="list-group-item">
-                <div class="card">
-                  <div class="card-body">{{Quote goes here}}</div>
-                  <div class="card-footer d-flex justify-content-end">
-                    <button class="btn btn-outline-primary" id="like-btn">
-                      Like Quote
-                    </button>
-                  </div>
-                </div>
-              </li>
-            </ul>
+            <ul class="list-group"></ul>
           </div>
           <div class="row justify-content-center pt-4">
             <div class="col col-2">
@@ -52,18 +41,7 @@
         </div>
         <div id="liked-quote-box" class="hidden">
           <div class="row">
-            <ul class="list-group">
-              <li class="list-group-item">
-                <div class="card">
-                  <div class="card-body">{{Quote goes here}}</div>
-                  <div class="card-footer d-flex justify-content-end">
-                    <button class="btn btn-outline-danger" id="unlike-btn">
-                      Unlike Quote
-                    </button>
-                  </div>
-                </div>
-              </li>
-            </ul>
+            <ul class="list-group"></ul>
           </div>
         </div>
       </div>
