--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+      rel="stylesheet"
+    />
+
+    <!-- Icons -->
+    <link href="public/assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="public/assets/css/nucleo-svg.css" rel="stylesheet" />
+
+    <!-- Font Awesome Icons -->
+    <script
+      src="https://kit.fontawesome.com/42d5adcbca.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- CSS Files -->
+    <link href="public/assets/css/argon-dashboard.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
@@ -46,11 +64,16 @@
         </div>
       </div>
     </div>
+    <script src="public/assets/js/popper.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- Core -->
+
+    <!-- Theme JS -->
+    <script src="public/assets/js/argon-dashboard.min.js"></script>
     <!-- Import the index file as a module, allows to divide code up into multiple files -->
     <script src="src/index.js" type="module"></script>
   </body>
