feat: change navbar colors, add margin bottom

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-primary mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" id="home">Quotly</a>
+        <a class="navbar-brand" id="home"><h3>Quotly</h3></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" id="liked-quotes">Liked</a>
+              <a class="nav-link text-white" id="liked-quotes">Liked</a>
             </li>
           </ul>
         </div>
