feat: add form for limit
Add form that allows users to limit the number of quotes to view (1-50)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
       </div>
     </nav>
     <div class="container">
+      <form action="" id="form">
+        <label for="quote-input">Enter Number of Quotes to get</label>
+        <input
+          type="number"
+          id="quote-input"
+          placeholder="Enter Number"
+          class="form-control"
+        />
+        <p class="form-text text-primary">Enter a number between 1 and 50</p>
+        <input
+          type="submit"
+          value="Get Quotes"
+          class="btn btn-success btn-sm"
+        />
+      </form>
       <div id="app">
         <div id="quote-box">
           <div class="row">
